# digital-country-hackathon-bhutan-2025

./: README.md
DRAGON/: README.md
DRAGON/UI/: .gitignore  README.md  index.html  tailwind.config.ts
DRAGON/UI/HEDGE_LORDS_UI/: README.md  angular.json  package.json  tailwind.config.js
DRAGON/UI/src/: App.tsx  index.css
DRAGON/server/: .gitignore  README.md  hardhat.config.js  package.json
DRAGON/server/BTC_TEST_NET_WALLET/: BTCDepositVerifier.sol  ChainlinkBTCOracle.sol  VaultManager.sol
DRAGON/server/HEDGE_LORDS_SERVER/: .gitignore  README.md  pyproject.toml  requirements.txt  run_simulator.bat
DRAGON/server/HEDGE_LORDS_SERVER/services/common/core/: config.py  logging.py
DRAGON/server/HEDGE_LORDS_SERVER/services/common/db/: database.py
DRAGON/server/HEDGE_LORDS_SERVER/services/common/exchanges/: base.py  delta.py
DRAGON/server/HEDGE_LORDS_SERVER/services/common/math/: cpu_monte.py  options_contracts.py
DRAGON/server/HEDGE_LORDS_SERVER/services/common/migrations/: create_historical_data_table.sql  create_market_data_table.sql
DRAGON/server/HEDGE_LORDS_SERVER/services/common/types/: enums.py  models.py
DRAGON/server/HEDGE_LORDS_SERVER/services/consumer/: main.py  payoff_service.py  routes.py  service.py  websocket_manager.py
DRAGON/server/HEDGE_LORDS_SERVER/services/producer/: main.py  routes.py  service.py
DRAGON/server/HEDGE_LORDS_SERVER/services/simulator/: service.py
DRAGON/server/HEDGE_LORDS_SERVER/tests/: test_delta.py
DRAGON/server/api/: package.json  server.js
DRAGON/server/contracts/: DragonCoin.sol
(+51 files in other folders)
